--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "js-cookie": "^3.0.5",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-phone-number-input": "^3.4.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
